# rag-aqtra-mkdocs

./: .gitignore  .tool-versions  README.md  pyproject.toml  requirements.txt
rag-mkdocs/: .env.example  .gitignore  FIXED_VERSIONS.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  check_index.sh  debug_launch.sh  pyproject.toml  pytest.ini  requirements.txt  test_api.py  update_index.py
rag-mkdocs/.github/workflows/: ci.yml
rag-mkdocs/app/: __init__.py  cache.py  main.py  metrics.py  prompt_config.py  rag_chain.py  settings.py
rag-mkdocs/app/api/: answering.py  deps.py  main.py
rag-mkdocs/app/api/routes/: admin_index.py  answer_v2.py  escalate.py  health.py  metrics.py  prompt_debug.py  query_v1.py  stream.py
rag-mkdocs/app/api/schemas/: v1.py  v2.py
rag-mkdocs/app/core/: language_policy.py  markdown_utils.py  prompt_config.py  prompt_renderer.py  rag_chain.py
rag-mkdocs/app/infra/: analytics.py  cache.py  conversations.py  db.py  metrics.py  models.py  openai_utils.py  rate_limit.py  zoho_desk.py
rag-mkdocs/app/rag/: __init__.py  index_lock.py  index_meta.py  indexing.py  not_found.py
rag-mkdocs/app/services/: __init__.py  answer_service.py  conversation_service.py  prompt_service.py
rag-mkdocs/app/vectorstore/faiss_index/: index.faiss  index.pkl
rag-mkdocs/data/mkdocs_docs/docs/app-development/: index.md  publishing-applications.md
rag-mkdocs/data/mkdocs_docs/docs/app-development/data-flow-components/: assign-context-role-for-model.md  calculate-array.md  confirm-one-time-code-for-user.md  confirm-user-email-request.md  deferred-update-entry.md  execute-api-call.md  execute-script.md  export-to-file.md  extract-collections.md  get-action-model.md  get-entity-by-id.md  get-file-info.md  get-one-time-code-for-user.md  get-raw-model.md  get-values-from-connector.md  index.md  load-catalogs-by-key.md  model-transformation-steps.md  (+15 more)
rag-mkdocs/data/mkdocs_docs/docs/installation/: configuration.md
rag-mkdocs/data/mkdocs_docs/docs/overview/: index.md  terms-of-use.rst
rag-mkdocs/data/mkdocs_docs/docs/tutorials/: 01-basic-setup.md  02-data-flow.md  index.md
rag-mkdocs/data/mkdocs_docs/docs/user-interface/: file-storage.md  index.md  maintenance.md
rag-mkdocs/docs/: PRODUCTION_CHECKLIST.md  RUNBOOK.md
rag-mkdocs/scripts/: chat_smoke.py  check_english_only.sh  check_index.sh  debug_launch.sh  regression_e2e.py  test_api.py  update_index.py
rag-mkdocs/tests/: README.md  __init__.py  _integration_utils.py  conftest.py  rag_scenarios.json  run_matrix.py  run_rag_scenarios.py  run_tests_with_logs.sh  test_api_v2_integration.py  test_cache_key.py  test_fixes_integration.py  test_index_meta_atomic.py  test_language_policy.py  test_prompt_config.py  test_prompt_preset_selection.py  test_prompt_render_endpoint.py  test_prompt_render_language.py  test_prompt_renderer.py  test_rag_scenarios.py  test_regression_offline.py  test_settings.py  test_smoke_collection.py  test_stage_metrics.py
rag-mkdocs/tests/fixtures/docs/: test1.md  test2.md  test3.md
rag-mkdocs/vectorstore/faiss_index/: .docs_hash  index.faiss  index.pkl
(+136 files in other folders)
