[tool.poetry]
name = "rag-mkdocs"
version = "1.0.0"
description = "RAG ассистент для документации MkDocs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.2.0"
langchain-text-splitters = "^0.2.0"
faiss-cpu = "1.8.0"
fastapi = "0.110.0"
uvicorn = "0.29.0"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

